--- a/apps/docs/src/app/platform/component-docs/platform-menu-button/platform-menu-button-examples/platform-menu-button-standard-example.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-menu-button/platform-menu-button-examples/platform-menu-button-standard-example.component.html
@@ -1,7 +1,7 @@
 <fdp-menu-button
     [id]="'menu-button-0'"
     [buttonLabel]="'Menu Button'"
-    [menu]="'menu'"
+    [menu]="menu"
     [compact]="false"
     [icon]="'world'"
     [disabled]="false"
@@ -9,5 +9,7 @@
     [options]="'emphasized'"
     (buttonClick)="userDefined($event)"
     [type]="'positive'"
-></fdp-menu-button>
+>
+</fdp-menu-button>
+
 <fdp-menu #menu [menuItems]="basicMenuData" [showSeparator]="false" [isScrolling]="false" [width]="'400px'"></fdp-menu>
