feat:status indicator refactoring to infoLabel
feat:status indicator refactoring to infoLabel

--- a/apps/docs/src/app/core/component-docs/info-label/info-label-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/info-label/info-label-docs.component.html
@@ -1,7 +1,7 @@
 <fd-docs-section-title [id]="'default'" [componentName]="'infolabel'">
 	Default Info Label
 </fd-docs-section-title>
-<component-example [name]="'ex1'">
+<component-example>
 	<fd-info-label-default-example></fd-info-label-default-example>
 </component-example>
 <code-example [exampleFiles]="defaultInfoLabelHtmlType"></code-example>
@@ -12,7 +12,7 @@
 	Info label with text
 </fd-docs-section-title>
 <description> <code>fd-info-label fd-info-label--accent-color-1</code> modifier can be used to render a Text version of the Info label. </description>
-<component-example [name]="'ex2'">
+<component-example>
 	<fd-info-label-text-example></fd-info-label-text-example>
 </component-example>
 <code-example [exampleFiles]="InfoLabelTextExample"></code-example>
@@ -23,7 +23,7 @@
 	Info Label with text and icon
 </fd-docs-section-title>
 <description> <code>fd-info-label fd-info-label--accent-color-1 fd-info-label--icon</code> modifier can be used to render a icon with text version of the Info Label. </description>
-<component-example [name]="'ex3'">
+<component-example>
 	<fd-info-label-text-icon-example></fd-info-label-text-icon-example>
 </component-example>
 <code-example [exampleFiles]="InfoLabelTextIconExample"></code-example>
@@ -34,7 +34,7 @@
 	Info label with numeric and only Icon
 </fd-docs-section-title>
 <description> <code>fd-info-label--numeric fd-info-label--only-icon</code> modifier can be used to render a numeric and icon only version of the badge. </description>
-<component-example [name]="'ex4'">
+<component-example>
 	<fd-info-label-numeric-icon-example></fd-info-label-numeric-icon-example>
 </component-example>
 <code-example [exampleFiles]="InfoLableNumericIconExample"></code-example>
