fix(Action bar):refactor ngx core action bar lib as per fiori 3

--- a/apps/docs/src/app/core/component-docs/action-bar/action-bar-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/action-bar/action-bar-docs.component.html
@@ -50,6 +50,30 @@
 <code-example [exampleFiles]="actionsContextualMenuHtml"></code-example>
 <separator></separator>
 
+<fd-docs-section-title [id]="'actionbar-standard'" [componentName]="'action-bar'">
+    Action bar with back button, description and action buttons And Resposive M_L
+</fd-docs-section-title>
+<description>
+    Standard action bar which will likely fit most use cases.
+</description>
+<component-example>
+    <fd-action-bar-medium-large-example></fd-action-bar-medium-large-example>
+</component-example>
+<code-example [exampleFiles]="mediumLargeViewHtml"></code-example>
+<separator></separator>
+
+<fd-docs-section-title [id]="'actionbar-standard'" [componentName]="'action-bar'">
+    Action bar with back button, description and action buttons And Resposive XL
+</fd-docs-section-title>
+<description>
+    Standard action bar which will likely fit most use cases.
+</description>
+<component-example>
+    <fd-action-bar-xtra-large-example></fd-action-bar-xtra-large-example>
+</component-example>
+<code-example [exampleFiles]="mediumLargeViewHtml"></code-example>
+<separator></separator>
+
 <fd-docs-section-title [id]="'actionBar-Mobile'" [componentName]="'action-bar'">
     Action bar mobile view
 </fd-docs-section-title>
