--- a/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-long-string-title-truncation-example.component.html
+++ b/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-long-string-title-truncation-example.component.html
@@ -1,13 +1,21 @@
 <div fd-action-bar>
-    <div fd-action-bar-back>
-        <button aria-label="back" fd-button [fdType]="'light'" [compact]="true" [glyph]="'nav-back'"></button>
-    </div>
     <div fd-action-bar-header>
-        <h3 fd-action-bar-title>Page Title Demo for very very very very very very very very very very very very very very very very very very very long text</h3>
-        <div fd-action-bar-description>Action bar Description with a very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very long text</div>
+        <div fd-action-bar-back>
+            <button aria-label="back" fd-button [compact]="true" [glyph]="'nav-back'"></button>
+        </div>
+        <h3 fd-action-bar-title>
+            Page Title Demo for very very very very very very very very very very very very very very very very very
+            very very long text
+        </h3>
+        <div fd-action-bar-actions>
+            <button fd-button [fdType]="'main'" [options]="'emphasized'" [compact]="true">Save</button>
+            <button fd-button [fdType]="'light'" [compact]="true">Cancel</button>
+        </div>
     </div>
-    <div fd-action-bar-actions>
-        <button fd-button [fdType]="'main'">Save</button>
-        <button fd-button [fdType]="'light'">Cancel</button>
+
+    <div fd-action-bar-description-with-backbtn>
+        Action bar Description with a very very very very very very very very very very very very very very very very
+        very very very very very very very very very very very very very very very very very very very very very very
+        very very very very very long text
     </div>
 </div>
