--- a/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-no-back-example.component.html
+++ b/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-no-back-example.component.html
@@ -1,10 +1,11 @@
 <div fd-action-bar>
     <div fd-action-bar-header>
         <h3 fd-action-bar-title>Page Title</h3>
-        <div fd-action-bar-description>Action bar Description</div>
+        <div fd-action-bar-actions>
+            <button fd-button [options]="'emphasized'" [compact]="true" [fdType]="'main'">Save</button>
+            <button fd-button [compact]="true" [fdType]="'light'">Cancel</button>
+        </div>
     </div>
-    <div fd-action-bar-actions>
-        <button fd-button [fdType]="'main'">Save</button>
-        <button fd-button [fdType]="'light'">Cancel</button>
-    </div>
+
+    <div fd-action-bar-description>Action bar Description</div>
 </div>
