--- a/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-responsive-M_L-example.component.html
+++ b/apps/docs/src/app/core/component-docs/action-bar/examples/action-bar-responsive-M_L-example.component.html
@@ -1,4 +1,4 @@
-<div fd-action-bar>
+<div fd-action-bar fd-action-bar-medium-large>
     <div fd-action-bar-header>
         <div fd-action-bar-back>
             <button
