Partially update new Select structure

--- a/apps/docs/src/app/core/component-docs/select/examples/select-basic-example/select-basic-example.component.html
+++ b/apps/docs/src/app/core/component-docs/select/examples/select-basic-example/select-basic-example.component.html
@@ -4,6 +4,8 @@
     </div>
 </fd-select>
 
+<br/>
+
 <fd-select
     class="fd-select-example"
     [(value)]="selectOneValue"
@@ -21,11 +23,21 @@
     [(value)]="selectTwoValue"
     [loading]="values == null"
     [compact]="true"
+    [mobile]="true"
+    [stateMessage]="'Error message'"
+    [state]="controlState.ERROR"
     placeholder="Compact select"
 >
+    <li fd-list-group-header>Group Header 1</li>
+    <fd-option>
+        <span fd-list-title>Product 2</span>
+        <span fd-list-secondary>750 EUR</span>
+    </fd-option>
     <div *ngFor="let fruit of values">
         <fd-option [value]="fruit">{{ fruit }}</fd-option>
     </div>
+
+    <li fd-list-footer>I'm Footer</li>
 </fd-select>
 <p>Selected Value: {{ selectTwoValue }}</p>
 
