--- a/apps/docs/src/app/core/component-docs/select/examples/select-custom-trigger/select-custom-trigger.component.html
+++ b/apps/docs/src/app/core/component-docs/select/examples/select-custom-trigger/select-custom-trigger.component.html
@@ -1,12 +1,12 @@
-<fd-select [(value)]="value" [triggerTemplate]="customTrigger" [placeholder]="'Select an option...'">
-    <fd-option value="apple">Apple</fd-option>
-    <fd-option value="pineapple">Pineapple</fd-option>
-    <fd-option value="tomato">Tomato</fd-option>
-    <fd-option value="strawberry">Strawberry</fd-option>
+<fd-select placeholder="Select an option" [(value)]="selectedValue" [controlTemplate]="customSelectTemplate">
+    <ng-container *ngFor="let option of options">
+        <fd-option [value]="option">{{option}}</fd-option>
+    </ng-container>
 </fd-select>
 
-<!-- Here, *select* refers to the actual select element so you can use it as you like! -->
-<ng-template #customTrigger let-selectValue>
-    <fd-icon [glyph]="'paper-plane'" class="custom-icon-styling"></fd-icon>
-    {{selectValue}}
+<ng-template #customSelectTemplate let-selectedOption>
+    <div class="custom-select-trigger-styling">
+        <fd-icon [glyph]="'action-settings'"></fd-icon>
+        {{selectedOption}}
+    </div>
 </ng-template>
