--- a/apps/docs/src/app/core/component-docs/select/examples/select-custom-trigger/select-custom-trigger.component.scss
+++ b/apps/docs/src/app/core/component-docs/select/examples/select-custom-trigger/select-custom-trigger.component.scss
@@ -1,23 +1,18 @@
-.custom-icon-styling {
-    padding-right: .5rem;
-    position: relative;
-    animation: animateIcon 1.5s infinite ease-in-out;
+.custom-select-trigger-styling {
+    display: flex;
+
+    fd-icon {
+        display: flex;
+        padding: 0 .5rem;
+        animation: spin 1s infinite ease-in-out;
+    }
 }
 
-@keyframes animateIcon {
-    0% {
-        bottom: 0;
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
     }
-    25% {
-        bottom: -2px;
-    }
-    50% {
-        bottom: 4px;
-    }
-    75% {
-        bottom: -2px;
-    }
-    100% {
-        bottom: 0;
+    to {
+        transform: rotate(360deg);
     }
 }
