build error fix

--- a/libs/platform/src/lib/components/Forms/radio-group/radio-group.component.html
+++ b/libs/platform/src/lib/components/Forms/radio-group/radio-group.component.html
@@ -3,7 +3,7 @@
         <fd-radio-button
             fd-form-control
             name="name"
-            [value]="None"
+            [value]="'None'"
             [state]="state"
             [compact]="compact"
             [disabled]="disabled"
