--- a/apps/docs/src/app/platform/component-docs/platform-forms/radio-group/platform-radio-group-examples/platform-radio-group-list-items-example.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-forms/radio-group/platform-radio-group-examples/platform-radio-group-list-items-example.component.html
@@ -1,31 +1,62 @@
+<p>Reactive form Examples</p>
 <form [formGroup]="customForm" class="flex-form">
-    <p>Example 1: Radio Buttons Types</p>
+    <p>Example 1: Radio Buttons Types with default value</p>
     <fieldset fd-fieldset>
-        <fdp-radio-group [name]="'radio1'" [list]="items" [isInline]="false" formControlName="example1">
+        <fdp-radio-group
+            [name]="'radio1'"
+            [value]="'Option 2'"
+            [list]="items"
+            [isInline]="false"
+            formControlName="example1"
+        >
         </fdp-radio-group>
     </fieldset>
-    <p>Example 2: Radio Buttons Compact</p>
+    <p>Example 2: Radio Buttons Types in Compact Size</p>
     <fieldset fd-fieldset>
-        <fdp-radio-group [name]="'radio2'" [list]="itemsCompact" [isInline]="false" formControlName="example2">
-        </fdp-radio-group>
-    </fieldset>
-    <p>Example 3: Radio Buttons Disabled</p>
-    <fieldset fd-fieldset>
-        <fdp-radio-group [name]="'radio3'" [list]="itemsDisabled" [isInline]="false" formControlName="example3">
-        </fdp-radio-group>
-    </fieldset>
-    <p>Example 4: Radio Buttons Inline</p>
-    <fieldset fd-fieldset>
-        <fdp-radio-group [name]="'radio4'" [list]="items" [isInline]="true" formControlName="example4">
+        <fdp-radio-group
+            [name]="'radio2'"
+            [size]="'compact'"
+            [list]="items"
+            [isInline]="true"
+            formControlName="example2"
+        >
         </fdp-radio-group>
     </fieldset>
 </form>
 <div>
-    Example 1: {{ customForm.value.example1 }}
+    Example 1 selelected value: {{ customForm.value.example1 }}
     <br />
-    Example 2: {{ customForm.value.example2 }}
-    <br />
-    Example 3: {{ customForm.value.example3 }}
-    <br />
-    Example 4: {{ customForm.value.example4 }}
+    Example 2 selelected value: {{ customForm.value.example2 }}
 </div>
+
+<br />
+<p>Template Driven Form</p>
+<form class="flex-form">
+    <p>Example 3: Radio Button Group Example with given list of objects, default value selection</p>
+    <fieldset fd-fieldset>
+        <fdp-radio-group
+            [name]="'radio3'"
+            [value]="'Option 2'"
+            [list]="items"
+            [size]="'cozy'"
+            [state]="'default'"
+            [isInline]="true"
+            [(ngModel)]="favoriteOption"
+        >
+        </fdp-radio-group>
+    </fieldset>
+    <p>Example 4: Radio Button Group Example with given list of string values</p>
+    <fieldset fd-fieldset>
+        <fdp-radio-group
+            [name]="'radio4'"
+            [list]="items"
+            [size]="'compact'"
+            [state]="'warning'"
+            [isInline]="true"
+            [(ngModel)]="favoriteOption2"
+        >
+        </fdp-radio-group>
+    </fieldset>
+</form>
+<div>Example 3 selelected option: {{ favoriteOption }}</div>
+<div>Example 4 selelected option: {{ favoriteOption2 }}</div>
