--- a/apps/docs/src/app/core/component-docs/select/select-docs.component.html
+++ b/apps/docs/src/app/core/component-docs/select/select-docs.component.html
@@ -19,14 +19,14 @@
 
 <separator></separator>
 
-<fd-docs-section-title [id]="'state'" [componentName]="'select'">
+<fd-docs-section-title [id]="'mode'" [componentName]="'select'">
     Select states
 </fd-docs-section-title>
-<description>Examples of Select control in different states</description>
+<description>Examples of Select control in different modes</description>
 <component-example>
-    <fd-select-state-example></fd-select-state-example>
+    <fd-select-mode-example></fd-select-mode-example>
 </component-example>
-<code-example [exampleFiles]="selectState"></code-example>
+<code-example [exampleFiles]="selectMode"></code-example>
 
 <separator></separator>
 
