feat:status indicator refactoring to infoLabel
feat:status indicator refactoring to infoLabel

--- a/apps/docs/src/app/core/component-docs/info-label/examples/info-label-icon-numeric-example.component.html
+++ b/apps/docs/src/app/core/component-docs/info-label/examples/info-label-icon-numeric-example.component.html
@@ -1,4 +1,4 @@
-<fd-info-label [labelType]="'numeric'" [color]="'2'" [message]="'6'" style="margin-right: 20px;"></fd-info-label>
-<fd-info-label [labelType]="'numeric'" [color]="'3'" [message]="'42k'" style="margin-right: 20px;"></fd-info-label>
-<fd-info-label [labelType]="'numeric'" [color]="'3'" [message]="'14.7'" style="margin-right: 20px;"></fd-info-label>
+<fd-info-label [labelType]="'numeric'" [color]="'2'" style="margin-right: 20px;">6</fd-info-label>
+<fd-info-label [labelType]="'numeric'" [color]="'3'" style="margin-right: 20px;">42k</fd-info-label>
+<fd-info-label [labelType]="'numeric'" [color]="'3'" style="margin-right: 20px;">14.7</fd-info-label>
 <fd-info-label [labelType]="'only-icon'" [color]="'5'" [glyph]="'hide'" style="margin-right: 20px;"></fd-info-label>
