--- a/apps/docs/src/app/core/component-docs/info-label/examples/info-label-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/info-label/examples/info-label-text-example.component.html
@@ -1,3 +1,3 @@
 <div style="margin-top: 10px;" *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]">
-	<fd-info-label [message]="'default label'" [color]="item"></fd-info-label>
+	<fd-info-label [color]="item">default label</fd-info-label>
 </div>
