--- a/libs/core/src/lib/info-label/info-label.component.html
+++ b/libs/core/src/lib/info-label/info-label.component.html
@@ -1,1 +1,3 @@
-<span class="fd-info-label" [ngClass]=" getCustomIconClass">{{message}}</span>
+<span class="fd-info-label" [ngClass]="buildCustomCss">
+  <ng-content></ng-content>
+</span>
