--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-icon-and-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-icon-and-text-example.component.html
@@ -1,5 +1,5 @@
-<fd-object-status [inverted]="true" [objectStatus]="'negative'" [glyph]="'status-negative'" [message]="'Inverted Negative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'critical'" [glyph]="'status-critical'" [message]="'Inverted Critical'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'positive'"  [glyph]="'status-positive'" [message]="'Inverted Positive'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'informative'"  [message]="'Inverted Informative'" [glyph]="'hint'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [message]="'Inverted Default'" [glyph]="'to-be-reviewed'" style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [inverted]="true" [status]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;">Inverted Negative</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'critical'" [glyph]="'status-critical'" style="margin-right: 20px;">Inverted Critical</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'positive'"  [glyph]="'status-positive'" style="margin-right: 20px;">Inverted Positive</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'informative'" [glyph]="'hint'" style="margin-right: 20px;">Inverted Informative</fd-object-status>
+<fd-object-status [inverted]="true" [glyph]="'to-be-reviewed'" style="margin-right: 20px;">Inverted Default</fd-object-status>
