--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-text-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-text-example.component.html
@@ -1,4 +1,4 @@
-<fd-object-status [objectStatus]="'negative'" [message]="'Negative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [objectStatus]="'critical'" [message]="'Critical'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [objectStatus]="'positive'" [message]="'Positive'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [objectStatus]="'informative'" [message]="'Informative'" style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [status]="'negative'" style="margin-right: 20px;">Negative</fd-object-status>
+<fd-object-status [status]="'critical'" style="margin-right: 20px;">Critical</fd-object-status>
+<fd-object-status [status]="'positive'" style="margin-right: 20px;">Positive</fd-object-status>
+<fd-object-status [status]="'informative'" style="margin-right: 20px;">Informative</fd-object-status>
