--- a/libs/core/src/lib/object-status/object-status.component.html
+++ b/libs/core/src/lib/object-status/object-status.component.html
@@ -1,1 +1,1 @@
-<span class="fd-object-status" [ngClass]=" getCustomCssClass">{{message}}</span>
+<span class="fd-object-status" [ngClass]="buildCustomCss"><ng-content></ng-content></span>
