--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-inverted-example.component.html
@@ -1,7 +1,7 @@
-<fd-object-status [inverted]="true" [objectStatus]="'negative'"  [message]="'Inverted Negative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'critical'"  [message]="'Inverted Critical'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'positive'"  [message]="'Inverted Positive'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'informative'"  [message]="'Inverted Informative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [message]="'Inverted Default'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'negative'"  [message]="'3'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [inverted]="true" [objectStatus]="'critical'"  [message]="'6.99'"  style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [inverted]="true" [status]="'negative'"  [message]="'Inverted Negative'" style="margin-right: 20px;">negative</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'critical'"  [message]="'Inverted Critical'" style="margin-right: 20px;">critical</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'positive'"  [message]="'Inverted Positive'" style="margin-right: 20px;">positive</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'informative'"  [message]="'Inverted Informative'" style="margin-right: 20px;">informative</fd-object-status>
+<fd-object-status [inverted]="true" style="margin-right: 20px;">Inverted Default</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'negative'"  [message]="'3'" style="margin-right: 20px;">negative</fd-object-status>
+<fd-object-status [inverted]="true" [status]="'critical'"  [message]="'6.99'"  style="margin-right: 20px;">critical</fd-object-status>
