--- a/apps/docs/src/app/core/component-docs/object-status/examples/object-status-large-example.component.html
+++ b/apps/docs/src/app/core/component-docs/object-status/examples/object-status-large-example.component.html
@@ -1,13 +1,13 @@
-<fd-object-status [large]="true" [objectStatus]="'negative'" [glyph]="'status-negative'" [message]="'Negative'"  style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [message]="'default label'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [clickable]="true" [objectStatus]="'informative'"  [message]="'informative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [objectStatus]="'positive'" [glyph]="'status-positive'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [objectStatus]="'critical'" [glyph]="'status-critical'" [message]="'Inverted Critical'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [objectStatus]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [objectStatus]="'negative'" [glyph]="'status-negative'" [message]="'Inverted Critical'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [objectStatus]="'positive'" [message]="'3'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [objectStatus]="'informative'" [message]="'6.99'" style="margin-right: 20px;"></fd-object-status>
-<fd-object-status [large]="true" [inverted]="true" [message]="'6.99'" [message]="'default label'" style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [large]="true" [status]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;">Negative</fd-object-status>
+<fd-object-status [large]="true" style="margin-right: 20px;">default label</fd-object-status>
+<fd-object-status [large]="true" [clickable]="true" [status]="'informative'"  style="margin-right: 20px;">informative</fd-object-status>
+<fd-object-status [large]="true" [status]="'positive'" [glyph]="'status-positive'" style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" [status]="'critical'" [glyph]="'status-critical'" style="margin-right: 20px;">Inverted Critical</fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" [status]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;"></fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" [status]="'negative'" [glyph]="'status-negative'" style="margin-right: 20px;">Inverted Critical</fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" [status]="'positive'" style="margin-right: 20px;">3</fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" [status]="'informative'" style="margin-right: 20px;">6.99</fd-object-status>
+<fd-object-status [large]="true" [inverted]="true" style="margin-right: 20px;">default label</fd-object-status>
 <div style="margin-top: 10px;" *ngFor="let item of [1,2,3,4,5,6,7,8]">
-  <fd-object-status [large]="true" [clickable]="true" [inverted]="true" [color]="item"  [message]="'Inverted Informative'" style="margin-right: 20px;"></fd-object-status>
+  <fd-object-status [large]="true" [clickable]="true" [inverted]="true" [color]="item" style="margin-right: 20px;">Inverted Informative</fd-object-status>
 </div>
