fix(action bar):refactor action bar as per new tech spec and also incorporating the new fiori3 style changes

--- a/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-docs.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-docs.component.html
@@ -1,4 +1,4 @@
-<fd-docs-section-title [id]="'actionbar-simple'" [componentName]="'actionbar'">
+<fd-docs-section-title [id]="'actionbar-simple'" [componentName]="'action-bar'">
     Simple Action Bar with page title and actions.
 </fd-docs-section-title>
 <description>
