--- a/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-examples/platform-action-bar-with-description-example.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-examples/platform-action-bar-with-description-example.component.html
@@ -1,9 +1,14 @@
 <fdp-action-bar
     [title]="'Page Action bar component'"
-    [actionItems]="actionItems"
-    (itemClick)="onItemClick($event)"
-    [placement]="'bottom-end'"
     [showBackButton]="true"
     [description]="'Action bar description from the component'"
 >
+    <fdp-action-button-group>
+        <fdp-button [compact]="true" [options]="'emphasized'">
+            Save
+        </fdp-button>
+        <fdp-button [compact]="true" [options]="'light'">
+            Cancel
+        </fdp-button>
+    </fdp-action-button-group>
 </fdp-action-bar>
