--- a/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-examples/platform-action-bar-simple-example.component.html
+++ b/apps/docs/src/app/platform/component-docs/platform-action-bar/platform-action-bar-examples/platform-action-bar-simple-example.component.html
@@ -1,4 +1,9 @@
-<fdp-action-bar [title]="'Page Action bar component'">
+<fdp-action-bar
+    [title]="'Page Action bar component'"
+    [description]="
+        'This Action Bar description should be composed with enough text to span the entire width of the Action Bar plus a good amount more such that it will force the Action Bar to truncate the text to a more managable size but not so much that it looses its meaning.'
+    "
+>
     <fdp-action-button-group>
         <fdp-button [compact]="true" [options]="'emphasized'">
             Save
